# flame

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  LICENSE  README.md  README.rst  a  check_code  dev-requirements.txt  flame.py  managers.py  pylintrc  requirements.txt  setup.cfg  test-requirements.txt  test_flame.py  tox.ini  upper-constraints.txt
doc/source/: conf.py  index.rst  installation.rst  limitations.rst  usage.rst
flameclient/: LICENSE.txt  __init__.py  client.py  cmd.py  collections_abc.py  flame.py  logs.py  managers.py  session.py  utils.py
flameclient/resources/: __init__.py  flavors.py  floatingips.py  images.py  key_pairs.py  networks.py  ports.py  routers.py  security_groups.py  server_groups.py  servers.py  subnets.py  volumes.py
flameclient/tests/: test_flame.py  test_flameports.py  test_utils.py  utils.py
flameclient/tests/fixtures/: __init__.py  utils.py
flameclient/tests/fixtures/openstackcloud/: __init__.py  flavors.py  floatingips.py  head.txt  images.py  key_pairs.py  networks.py  ports.py  routers.py  security_groups.py  server_groups.py  servers.py  subnets.py  volumes.py
flameclient/tests/fixtures/results/: flame.yaml  flame_adoption_data.yaml  flame_constraints.yaml  flame_constraints_extract_ports.yaml  flame_extract_ports.yaml
flameclient/utils/: api_threading.py
