[metadata]
name = python-flameclient
summary = Automatic Heat template generation
description-file =
    README.rst
author = CloudWatt
author-email = info@cloudwatt.com
home-page = http://www.cloudwatt.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    flameclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    flame = flameclient.cmd:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = flameclient/locale
domain = python-flameclient

[update_catalog]
domain = python-flameclient
output_dir = flameclient/locale
input_file = flameclient/locale/python-flameclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = flameclient/locale/python-flameclient.pot

[wheel]
universal = 1